fix(kit): textarea flickering when type space

--- a/projects/kit/components/textarea/textarea.style.less
+++ b/projects/kit/components/textarea/textarea.style.less
@@ -154,7 +154,7 @@
 }
 
 .t-pseudo-content {
-    white-space: pre-wrap;
+    white-space: break-spaces;
     word-wrap: break-word;
     word-break: keep-all;
     pointer-events: none;
